--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
         "fideloper/proxy": "^4.0",
         "hyn/multi-tenant": "5.1.*",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "spatie/laravel-permission": "^2.19"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.2",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
